[gd_scene load_steps=7 format=2]

[ext_resource path="res://material_maker/panels/layers/layers_tree.gd" type="Script" id=1]
[ext_resource path="res://material_maker/panels/layers/layers.gd" type="Script" id=2]
[ext_resource path="res://material_maker/panels/paint/icons/remove_layer.png" type="Texture" id=3]
[ext_resource path="res://material_maker/panels/paint/icons/add_layer.png" type="Texture" id=4]
[ext_resource path="res://material_maker/panels/paint/icons/up.png" type="Texture" id=5]
[ext_resource path="res://material_maker/panels/paint/icons/down.png" type="Texture" id=6]

[node name="Layers" type="VBoxContainer"]
margin_right = 150.0
margin_bottom = 224.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tree" parent="."]
margin_right = 150.0
margin_bottom = 204.0
rect_min_size = Vector2( 150, 200 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
hide_root = true
script = ExtResource( 1 )

[node name="Buttons" type="HBoxContainer" parent="."]
margin_top = 208.0
margin_right = 150.0
margin_bottom = 224.0
size_flags_horizontal = 3

[node name="Add" type="TextureButton" parent="Buttons"]
margin_right = 34.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="Remove" type="TextureButton" parent="Buttons"]
margin_left = 38.0
margin_right = 73.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="Up" type="TextureButton" parent="Buttons"]
margin_left = 77.0
margin_right = 111.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="Down" type="TextureButton" parent="Buttons"]
margin_left = 115.0
margin_right = 150.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 3
[connection signal="button_pressed" from="Tree" to="Tree" method="_on_Tree_button_pressed"]
[connection signal="cell_selected" from="Tree" to="Tree" method="_on_Tree_cell_selected"]
[connection signal="gui_input" from="Tree" to="Tree" method="_on_Tree_gui_input"]
[connection signal="item_edited" from="Tree" to="Tree" method="_on_Tree_item_edited"]
[connection signal="layers_changed" from="Tree" to="." method="_on_Tree_layers_changed"]
[connection signal="selection_changed" from="Tree" to="." method="_on_Tree_selection_changed"]
[connection signal="pressed" from="Buttons/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Buttons/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="Buttons/Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Buttons/Down" to="." method="_on_Down_pressed"]
